#730: loading times are now put into detailed-results.json file